# cosmos

./: .gitignore  AUTHORS.md  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  cbindgen.toml  install.sh
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
assets/Cosmos-logo/: info.txt
cosmos-cli/: Cargo.toml  README.md
cosmos-cli/src/: main.rs
cosmos-core/: Cargo.toml  README.md
cosmos-core/src/: config.rs  constellation.rs  error.rs  ffi.rs  galaxy.rs  installer.rs  lib.rs  resolver.rs  star.rs  universe.rs
cosmos-transport/: Cargo.toml  README.md
cosmos-transport/src/: ftp.rs  http.rs  lib.rs
cosmos-universe/: Cargo.toml  README.md
cosmos-universe/src/: lib.rs
nova/: Cargo.toml  README.md
nova/src/: lib.rs
stellar/: Cargo.toml  README.md
stellar/src/: build_star.rs  fetch.rs  galaxy.rs  main.rs  new_star.rs  validate.rs
