[package]
name = "cosmos-core"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ['rlib']

[features]
default = []  # No default features
transport-https = ["cosmos-transport/https"]
ffi = []

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
flate2 = "1.1.0"
tar = "0.4.40"
toml = "0.8.20"
sha2 = "0.10.8"
cosmos-universe = { path = "../cosmos-universe" }
nova = { path = "../nova" }
semver = { version = "1.0.26", features = ["serde"] }
thiserror = "1.0"
tempfile = "3.19.1"
fs_extra = "1.3.0"
cosmos-transport = { path = "../cosmos-transport", default-features = true, optional = false }
